# chatbot-proto

./: .gitignore  .pdm-python  CHANGELOG.md  README.md  build.py  cliff.toml  pyproject.toml
.github/workflows/: release.yml
scripts/: build.py
src/chatbot_proto/: __init__.py  search_pb2.py  search_pb2_grpc.py
src/chatbot_proto/proto/: search.proto
